--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section id="Historia">
             <h1>História do mascote do android</h1>
                 <p>Provavelmente você sabe que o sistemas operacional <span>Android</span>, mantido pelo <span>Google</span> é um dos mais utilizados para dispositíveis móveis em todo o mundo. Mas talvez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
-                <h2 class="topicos">A primeira Versão</h2>
+                <h2 class="topicos">A primeira versão</h2>
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="bla
                     " class="externo">Dan Morril</a></span>. Ele conta que abriu o <span><a href="https://inkscape.org/" rel="next" target="_blank" class="externo">inkscape</a></span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solitação de empresa para a criação de um mascote</p>
                 <picture>
